# otus-cpp-pro

./: CMakeLists.txt  ip_filter.cpp  ip_filter_test.cpp  lib.cpp  lib.h  main.cpp  test_version.cpp  util.cpp  util.h  version.h.in
.github/workflows/: release.yaml
